# clown-concrete

./: README.md  al2023_install.sh  cor23notes.txt  docker-compose.yml  dumb_notes_ignore_this.txt  ec2.sh  tear_down.sh
auth/: htpasswd
certs/: private.key  publickey.crt
exploit/: __init__.py.patch  decode.py  exploit.sh  pypirc  pyproject.toml.patch  requirements.txt  setup.py.patch  twine_trusted_monkey_patch.py
flask/: .mypy.ini  Dockerfile  app.py  flag.txt  layout_utils.py  requirements.txt  wsgi.py
flask/backup_calculator_wrapper/: __init__.py  concrete.py  pyproject.toml
flask/backup_calculator_wrapper/calculator_wrapper/: __init__.py  __init__.pyi
flask/backup_calculator_wrapper/concrete_calculator/: README.md  pyproject.toml
flask/backup_calculator_wrapper/concrete_calculator/concrete_calculator/: __init__.pyi
flask/calculator_wrapper/: README.md  pyproject.toml
flask/calculator_wrapper/calculator_wrapper/: __init__.py
flask/certs/: private.key  publickey.crt
flask/concrete_calculator/: LICENSE  MANIFEST.in  pyproject.toml  setup.py
flask/concrete_calculator/concrete_calculator/: __init__.py  __init__.pyi
flask/configs/: auth.toml  pip.conf  supervisord.conf
flask/scripts/: reload.sh
flask/static/css/: style.css
flask/templates/: base.html  incl_footer.html  incl_navbar.html  modal.html
flask/templates/calculators/: curbs_and_gutters.html  footer.html  round_column.html  round_slab.html  square_column.html  square_slab.html  steps.html  wall.html
flask/templates/home/: about.html  index.html
nginx/: Dockerfile  default.conf  start.sh
pypi/: _app.py  welcome.html
