[tool.poetry]
name = "calculator-wrapper"
version = "0.1.0"
description = "Wrapper for concrete_calculator"
authors = ["plasticuproject"]
license = "MIT"
readme = "README.md"
packages = [{include = "calculator_wrapper"}]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
