[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "concrete_calculator"
version = "1.9.9.9.9.9.9.9.9.9"
authors = [
  { name="plasticuproject", email="plasticuproject@pm.me" },
]
description = "Concrete Volume Calculator"
readme = "README.md"
keywords = ["concrete", "calculator", "volume"]
requires-python = ">=3.11"
classifiers = [
          "Development Status :: 4 - Beta", "Intended Audience :: Developers",
          "License :: OSI Approved :: MIT License",
          "Programming Language :: Python :: 3", "Topic :: Utilities"
]
dependencies = []

[tool.mypy]
strict = true
